# life-cubed

./: Cargo.toml  README.md
src/: cell.rs  cell_world.rs  flycam.rs  graphics.rs  main.rs  ui.rs  world.rs
